test-jenkins-sonar-front

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,18 @@
 sonar.projectKey=angular-sonar-demo
-sonar.projectName=Angular Sonar Demo
+sonar.projectName=front-demo-angular
 sonar.projectVersion=1.0
+
+# Dossier source principal
 sonar.sources=src
 sonar.exclusions=**/*.spec.ts,**/node_modules/**
+
+# Tests et inclusion des fichiers de tests
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Chemin du fichier de couverture
+sonar.javascript.lcov.reportPaths=C:/Users/WINDATA/Desktop/vms-tp-ci-cd/projet/front-demo-angular/coverage/front-demo-angular/lcov.info
+
+# URL du serveur SonarQube
 sonar.host.url=http://localhost:9000
 sonar.login=squ_06259873b5dc5332bc6f04dd0a846de6634605d9
